<resources>

    <string name="about_version">V %1$s</string>
    <string name="app_name">Auto</string>
    <string name="title">Hello, world!</string>
    <string name="uninstall">uninstall</string>
    <string name="update">install or update</string>
    <string name="product">Product</string>
    <string name="type">Type</string>
    <string name="version">Version</string>

    <string name="toast_not_installed">Not installed</string>
    <string name="toast_no_network">No network</string>
    <string name="toast_request_error">Request error</string>
    <string name="toast_connect_error">Connection error</string>
    <string name="toast_no_update">no update</string>
    <string name="toast_no_files">no files</string>
    <string name="toast_delete_successfully">Delete successfully</string>
    <string name="toast_reading_dir">Reading dir</string>
    <string name="toast_downloading">Downloading</string>
    <string name="dialog_loading">Loading</string>
    <string name="dialog_downloading">Downloading</string>
    <string name="dialog_deleting">Deleting</string>

    <string name="menu_about">About</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_more">More</string>
    <string name="menu_refresh">Refresh</string>

</resources>
