<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">

    <TextView
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include layout="@layout/gray_line" />

    <LinearLayout
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <TextView
            android:text="@string/product"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/input_line"
            android:gravity="center_vertical"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinner_products"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <TextView
            android:text="@string/type"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/input_line"
            android:gravity="center_vertical"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <TextView
            android:text="@string/version"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/input_line"
            android:gravity="center_vertical"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinner_version"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <include layout="@layout/gray_line" />

    <Button
        android:id="@+id/btn_uninstall"
        android:text="@string/uninstall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_install"
        android:text="@string/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
